fixed horizontal scrolling bug for mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,11 @@ html::-webkit-scrollbar {
  display: none;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 figure {
   margin-bottom: 0 !important;
 }
